--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <a href="#" class="login-link d-flex align-center gap-1">
                 <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                <span class="login-text">Sign In</span>
+                <span class="login-text">Login</span>
             </a>
             <a href="#" class="cart-link d-flex align-center gap-1">
                 <i class="fa-solid fa-shopping-cart"></i>
