--- a/store.html
+++ b/store.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Second page. For product: Nike Arizona Basketball Jersey -->
     <title>Nike Arizona Wildcats Basketball Jersey - WildcatWear</title>
     
-    <!-- Linking external stylesheets for FontAwesome icons and custom styles -->
+    <!-- Linking external stylesheets for FontAwesome icons and CSS styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/utility-styles.css">
     <link rel="stylesheet" href="css/style.css">
@@ -110,10 +111,10 @@
                 </div>
 
                 <!-- Add to cart button -->
-                <button class="btn btn-primary add-to-cart d-flex align-center justify-center gap-2 mt-3">
+                <a href="#" class="btn btn-primary add-to-cart d-flex align-center justify-center gap-2 mt-3">
                     <i class="fa-solid fa-shopping-cart"></i>
                     Add to Cart
-                </button>
+                </a>
             </div>
         </div>
     </section>
