--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-solid fa-star-half-alt"></i>
                         <span class="ml-1">(40)</span>
                     </div>
                     <p class="product-price">$29.99</p>
