--- a/store.html
+++ b/store.html
@@ -1,9 +1,9 @@
+<!-- Second page. A product listing: Nike Arizona Basketball Jersey -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Second page. For product: Nike Arizona Basketball Jersey -->
     <title>Nike Arizona Wildcats Basketball Jersey - WildcatWear</title>
     
     <!-- Linking external stylesheets for FontAwesome icons and CSS styles -->
@@ -44,7 +44,7 @@
             </div>
             <a href="#" class="login-link d-flex align-center gap-1">
                 <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                <span class="login-text">Sign In</span>
+                <span class="login-text">Login</span>
             </a>
             <a href="#" class="cart-link d-flex align-center gap-1">
                 <i class="fa-solid fa-shopping-cart"></i>
